--- a/main-app/public/bridge.html
+++ b/main-app/public/bridge.html
@@ -10,7 +10,8 @@
         const STORAGE_KEY = 'musicLibrarySongs';
         const ALLOWED_ORIGINS = [
           'http://localhost:5174',
-          'http://127.0.0.1:5174'
+          'http://127.0.0.1:5174',
+          'microfrontendmusiclibrary.netlify.app'
         ];
 
         // Accept an additional allowed origin from query string: ?allowed=<origin>
